--- a/orange.html
+++ b/orange.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>The Orange Page</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
     <h1 style="color: #F90">The Orange Page</h1>
