--- a/rainbow.html
+++ b/rainbow.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Crazy Experiment</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
         <h1>A Crazy Experiment</h1>
